--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.20",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.2",
+    "fast-sort": "^3.4.1",
     "next": "15.1.2",
     "postcss": "8.4.49",
     "react": "19.0.0",
