--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.3.0",
     "@types/node": "22.10.2",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
@@ -17,11 +18,15 @@
     "eslint-config-next": "15.1.2",
     "fast-sort": "^3.4.1",
     "next": "15.1.2",
+    "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.16.0",
     "postcss": "8.4.49",
+    "prisma": "^6.3.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwindcss": "3.4.17",
-    "typescript": "5.7.2"
+    "typescript": "5.7.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "daisyui": "^4.12.22"
