--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "preview-email": "maildev",
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.3.0",
+    "@react-email/components": "^0.0.32",
+    "@react-email/preview": "0.0.12",
     "@types/node": "22.10.2",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "autoprefixer": "10.4.20",
+    "bcrypt": "^5.1.1",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.2",
     "fast-sort": "^3.4.1",
+    "lodash": "^4.17.21",
     "next": "15.1.2",
     "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
@@ -24,11 +31,16 @@
     "prisma": "^6.3.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-email": "^3.0.6",
+    "react-hook-form": "^7.54.2",
+    "resend": "^4.1.2",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/lodash": "^4.17.15",
     "daisyui": "^4.12.22"
   }
 }
