--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs_mosh_crash_course",
+  "name": "altrad-prezioso-survey",
   "version": "0.1.0",
   "private": true,
   "scripts": {
