--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "autoprefixer": "10.4.20",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.2",
